--- a/es/coding/arrays.html
+++ b/es/coding/arrays.html
@@ -22,8 +22,8 @@ $array($index,10i) = 1
 ```
 
 `<nombre>`: [variable](variables.md) local o global\
-`<indice>`: cualquier variable que contenga un índice del elemento para leer o escribir\
-`<tamaño>`: cualquier valor mayor que 0\
+`<indice>`: cualquier variable que contenga el índice del elemento para leer o escribir\
+`<tamaño>`: cualquier valor entre 1 y 255\
 `<tipo>`: uno de los caracteres `i` `f` `s` `v`:
 
 |Letra|Tipo de elemento|Tamaño del elemento (bytes)|
