--- a/test/markdown/html.html
+++ b/test/markdown/html.html
@@ -10,11 +10,11 @@
 <body>
 :::h-43 o-auto
 
-Markdown - **By MatiDragon**
+MarkdownMD - **v{{ 2+5 }}**
 ========================
 
-[x] [lorem][]Lorem, __ipsum__ dolo~r~ :clap: sit amet **consectetur** adipisicing, elit.
-[] Nam ~~animi~~ *mollitia* nesciun^t^ ***reprehenderit***, voluptate [error](#how-to-use-the-demo 'orange') similique saepe.
+[x] [lorem][]Lorem, __ipsum__ do~lor~ :clap: sit amet **consectetur** adipisicing, elit.
+[] Nam ~~animi~~ *mollitia* nesci^unt^ ***reprehenderit***, voluptate [error](#how-to-use-the-demo 'orange') similique saepe.
 
 | table | number one |
 |-|
@@ -72,11 +72,11 @@ Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 {% hint style="warning" %}
 [h5][:warning: Warning:]\nipsum dolor sit, amet consectetur adipisicing elit
 
-> jolas ko sit 
+> :note: jolas ko sit 
 
 {% hint style="info" %}
 
-:bulb: Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
+:tip: Lorem, ipsum dolor sit, amet consectetur adipisicing elit:
 > jolas ko sit 
 
 {% endhint %}
