--- a/tr/coding/keywords.html
+++ b/tr/coding/keywords.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <title>Keywords</title>
+  <title>Anahtar Kelimeler / Kısaltımlar</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,20 +9,20 @@
 </head>
 <body>
 
-A keyword is a single word that replaces the opcode for simple commands.\
-For example, the keyword WAIT can be used  instead of opcode 0001.\
-To demonstrate:
+Anahtar Kelimeler, işlem ya da kaynak kodlarının eylemlerini kısaltım yolu ile yazılmasıdır.\
+Örneğin, anahtar kelime olan WAIT (bekle) 0001 numaralı kaynak kodu yerine yazılabilir.\
+Şöyle gösterelim:
 
 ```sb3
 wait 0
 ```
 
-instead of
+yazılabilir, normalde yazdığımız ise:
 
 ```sb3
 0001: wait 0
 ```
 
-The keywords list can be displayed by pressing Ctrl+Space.
+Tüm anahtar kelimelerin listesini Ctrl+Space kombinasyonu ile bakabilirsiniz.
 
 <script src="../../js/main.min.js"></script>
