--- a/es/version-history.html
+++ b/es/version-history.html
@@ -9,6 +9,23 @@
 </head>
 <body>
 
+## v. 3.8.5 - 22.02.2023
+
+* fix bug [#216](https://github.com/sannybuilder/dev/issues/216)
+
+## v. 3.8.4 - 17.02.2023
+
+* keep previously opened documents when launching SB with an input file (Open with) [#151](https://github.com/sannybuilder/dev/issues/151)
+* add "--decompile" parameter to [CLI](editor/cli.md#decompile)
+* fix bugs [#212](https://github.com/sannybuilder/dev/issues/212), [#213](https://github.com/sannybuilder/dev/issues/213), [#180](https://github.com/sannybuilder/dev/issues/180)
+* fix some compilation issues with classes using string literals
+
+## v. 3.8.3 - 08.01.2023
+
+* fix bugs [#210](https://github.com/sannybuilder/dev/issues/210), [#204](https://github.com/sannybuilder/dev/issues/204), [#168](https://github.com/sannybuilder/dev/issues/168)
+* fix [a bug](https://github.com/sannybuilder/GetObjectID/issues/1) in model search
+* update CLEO+ plugin to [1.1.3](https://github.com/JuniorDjjr/CLEOPlus/releases/tag/v1.1.3)
+
 ## v. 3.8.2 - 08.09.2022
 
 * Bugs arreglados [#200](https://github.com/sannybuilder/dev/issues/200), [#187](https://github.com/sannybuilder/dev/issues/187)
