--- a/ru/editor/cli.html
+++ b/ru/editor/cli.html
@@ -27,6 +27,30 @@ sanny.exe --compile C:\myscm.txt C:\myscm.scm
 
 Краткая форма: `-c`
 
+## --decompile
+
+`--decompile <input file path> [output file path]` - decompiles the file and exits
+
+```
+sanny.exe --decompile C:\myscm.scm C:\myscm.txt
+```
+
+{% hint style="info" %}
+The `output file path` __ parameter is optional. If there is no output path parameter, the compiler uses the [format rules](options/formats.md#file-name-format) to compute the output file name.&#x20;
+{% endhint %}
+
+{% hint style="info" %}
+The input file must have no errors. If there are errors found during decompilation, they will be logged in the file `compile.log`. When decompilation ends, the program shuts down.
+{% endhint %}
+
+Shortcut: `-d`
+
+**--use-source** - optional argument that makes the decompiler use the source code [embedded in the script](options/general.md#add-extra-info-to-scm) (if present). By default the source is ignored.
+
+```
+sanny.exe --decompile C:\1.cs --use-source
+```
+
 ## --debug
 
 `--debug` - переключает [отладочные опции](console.md#otladochnye-opcii)
