Update: `<lang>\coding\array.html`
`<size>`: a value between 1 and 255 (inclusive)

--- a/en/coding/arrays.html
+++ b/en/coding/arrays.html
@@ -23,7 +23,7 @@ $array($index, 10i) = 1
 
 `<array name>`: local or global [variable](variables.md)\
 `<index var name>`: any variable containing an index of the element to read or write\
-`<size>`: any value greater than 0\
+`<size>`: a value between 1 and 255 (inclusive)\
 `<type>`: one of characters `i` `f` `s` `v`:
 
 |Letter|Item Type|Item Size (bytes)|
