--- a/ru/coding/arrays.html
+++ b/ru/coding/arrays.html
@@ -23,7 +23,7 @@ $array($index, 10i) = 1
 
 `<имя массива>`: локальная или глобальная [переменная](variables.md)\
 `<индекс>`: локальная или глобальная переменная, содержащая индекс элемента, который нужно прочитать или изменить\
-`<размер>`: любое целое число больше 0\
+`<размер>`: a value between 1 and 255 (inclusive)\
 `<тип>`: одна из букв `i` `f` `s` `v`:
 
 |Буква|Тип элемента|Размер элемента (в байтах)|
