--- a/en/coding/arrays.html
+++ b/en/coding/arrays.html
@@ -13,15 +13,17 @@ An **array** represents an indexed collection of elements of the same type (call
 
 ## General Syntax
 
-San Andreas:\
-`<array name>(<index var name>,<size><type>)`
+San Andreas:
+```sb3
+<,nombre>(<,indice>,<,tamaño><,tipo>)
+```
 
 ```sb3
 $index = 0
 $array($index, 10i) = 1
 ```
 
-`<array name>`: local or global [variable](variables.md)\
+`<array name>`: a local or global [variable](variables.md)\
 `<index var name>`: any variable containing an index of the element to read or write\
 `<size>`: a value between 1 and 255 (inclusive)\
 `<type>`: one of characters `i` `f` `s` `v`:
@@ -51,15 +53,14 @@ $array($index,10) = 1
 
 ## Array Declaration
 
-Arrays can be declared using the [`VAR..END`](variables.md#var-end-construct) construct:\
-`var`\
-`   <array name>: array <size> of <type>`\
-`end`
+Arrays can be declared using the `var` keyword (similar to [variables](variables.md)):
 
 ```sb3
-var
-    $FloatArray: array 10 of Float
-end
+var <array name>: array <size> of <type>
+```
+
+```sb3
+var $FloatArray: array 10 of Float
 ```
 
 ### Accessing array elements after declaration
@@ -67,9 +68,7 @@ end
 After declaring an array you can work access its elements using square brackets:
 
 ```sb3
-var
-    $FloatArray: array 10 of Float
-end
+var $FloatArray: array 10 of Float
 $index = 1
 $FloatArray[$index] += 100.0
 ```
@@ -79,9 +78,7 @@ $FloatArray[$index] += 100.0
 You can use positive integer numbers and zero to access a particular array element:
 
 ```sb3
-var
-    $FloatArray: array 10 of Float
-end
+var $FloatArray: array 10 of Float
 $FloatArray[1] += 100.0
 ```
 
@@ -97,9 +94,7 @@ s$strings[2] = 'str3'
 An array can be declared as a collection of [class instances](classes.md#class-instances):
 
 ```sb3
-var
-  $players: array 2 of Player
-end
+var $players: array 2 of Player
 $players[0].Build
 ```
 
