--- a/en/coding/variables.html
+++ b/en/coding/variables.html
@@ -9,24 +9,27 @@
 </head>
 <body>
 
-A **variable (var)** is a named storage location that contains a value and can be read/rewrite many times. There are two types of variables.
+A **variable (var)** is a named storage location that contains a value and can be read/rewrite many times. Variables can be either _global_ or _local_.
 
 ## Global variables
 
-A global variable starts with `$` followed by an identifier (name).\
-The global variable name is any combination of letters, digits and `_`:\
-\
-`$variable1 $100 $____`
+A global variable starts with `$` followed by any combination of letters, digits and `_`:
 
-{% hint style="info" %}
-A global variable with the name that only consists of digits is called a `DMA`-variable (**D**irect **M**emory **A**ddress). See also [Alloc](built-in-commands.md#alloc).
-{% endhint %}
+`$variable1`\
+`$100`\
+`$____`
 
 Their values are available from any place of the code.
 
 ### **Saved Variables**
 
-A saved variable is a special global variable available only in `LCS `and `VCS `modes. Its name is prefixed with `$_`, e.g. `$_var`. The value of this variable persists across saved games. Global variables denoted by `$` only (e.g. `$var`) are not saved and they get blank values when the LCS or VCS game loads.
+A saved variable is a special global variable available only in `LCS` and `VCS` modes. Its name is prefixed with `$_`, e.g., `$_var`. The value of this variable persists across saved games. Global variables denoted by `$` only (e.g., `$var`) are not saved and they get blank values when the LCS or VCS game loads.
+
+### DMA Variables
+
+When global variables are compiled, each one of them gets a new index in the global variable space. This index will be used by the game to locate the variable value. This index is unique across all scripts (hence global).
+
+A global variable with the name that only consists of digits is called a `DMA`-variable (**D**irect **M**emory **A**ddress). See also [Alloc](built-in-commands.md#alloc).
 
 ## Local variables
 
@@ -46,7 +49,7 @@ The number of local variables per script is strictly [limited](../scm-documentat
 
 ### **Timer Variables**
 
-Each script or a mission have 2 special local variables called `TIMERA `and `TIMERB`. The value of a timer variable is increased automatically when the game clock advances, so they are commonly used to measure time elapsed since the timer reset:
+Each script or a mission have 2 special local variables called `TIMERA` and `TIMERB`. The value of a timer variable is increased automatically when the game clock advances, so they are commonly used to measure time elapsed since the timer reset:
 
 ```sb3
 0006: TIMERA = 0 // reset the timer
@@ -60,10 +63,10 @@ Each script or a mission have 2 special local variables called `TIMERA `and `TIM
 ```
 
 {% hint style="info" %}
-`TIMERA `and `TIMERB `names are only available starting with Sanny Builder v3.3.0. In older scripts the timers are known as `16@`, `17@` (GTA3, VC) or `32@`, `33@` (SA).
+`TIMERA` and `TIMERB` names are only available starting with Sanny Builder v3.3.0. In older scripts the timers are known as `16@`, `17@` (GTA3, VC) or `32@`, `33@` (SA).
 {% endhint %}
 
-## VAR..END construct
+## Declaring a variable type
 
 Variables are commonly used in the expressions. If the right operand is a number constant, the opcode can be omitted:
 
@@ -72,9 +75,9 @@ $var = 0
 $myarray($index, 10i) >= 150
 ```
 
-If both operands in the expression are variables, the compiler can not determine the correct opcode, because the types of the variables are unknown.
+If both operands in the expression are variables, the compiler cannot determine the correct opcode, because the types of the variables are unknown.
 
-For example, there are two opcodes to increment a variable value: `0058 `for integer values and `0059 `for floating-point values.
+For example, there are two opcodes to increment a variable value: `0058` for integer values and `0059 `for floating-point values.
 
 ```sb3
 0058: $Var1 += $Var2 // (int)
@@ -87,16 +90,45 @@ Assuming there is no opcode, which one to use?
 $Var1 += $Var2 // ??
 ```
 
-To communicate the compiler a variable type use the `VAR..END` construct.
+To tell the compiler the type of the variable, use the `var` keyword.
 
-`VAR..END` construct allows to declare variables and their types for the advanced use.
+```
+var <variable>: <type>
+```
 
-Syntax:\
-`var`\
-`<variable>: <type>`\
-`end`
-.
-For example, if both variables are declared, the compiler is able to process the expression without opcodes:
+A `variable` is a valid global or local variable name as described above.
+
+A `type` could be one of these:
+
+* `Integer`, `Int` - integer values
+* `Float` - floating-points values
+* `String`, `ShortString` - a variable containing a string literal with the fixed length (only for the arrays, use `s$`, `@s` for variables)
+* `LongString` - a variable containing a string literal with the variable length (only for the arrays, use `v$`, `@v` for variables)
+* `<Class name>` - any available [class name](classes.md)
+
+Example:
+
+```pascal
+var $size: integer
+```
+
+You can define types for multiple variables by separating each declaration with a comma like this:
+
+```pascal
+var $x: float, $y: float, $z: float
+```
+
+If you prefer to have each declaration on its own line, conclude them in a `VAR..END` construct:
+
+```pascal
+var
+   $x: float
+   $y: float
+   $z: float
+end
+```
+
+When variable types are known, the compiler is able to process the expression without opcode:
 
 ```sb3
 var
@@ -105,16 +137,6 @@ var
 end
 $Var1 += $Var2 // opcode 0058
 ```
-
-The following types of variables are supported:
-
-* `Integer`, `Int `- integer values
-* `Float `- floating-points values
-* `String`, `ShortString `- a variable containing a string literal with the fixed length (only for the arrays, use `s$`, `@s` for variables)
-* `LongString `- a variable containing a string literal with the variable length (only for the arrays, use `v$`, `@v` for variables)
-* `<Class name>` - any available [class name](classes.md)
-
-The types of the local variables can be declared too.
 
 {% hint style="info" %}
 Once the type of the variable is declared it is used for all the code following the declaration.\
@@ -193,9 +215,7 @@ Due to [design limitations](https://github.com/sannybuilder/dev/issues/32) this 
 You can specify an initial value for the variable when declaring it. Write `=` and then the value:
 
 ```sb3
-var
-    $fVar: float = 1.0
-end
+var $fVar: float = 1.0
 ```
 
 or
