--- a/en/coding/variables.html
+++ b/en/coding/variables.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-A **variable (var)** is a named storage location that contains a value and can be read/rewrite many times. Variables can be either _global_ or _local_.
+A **variable (var)** is a named storage location that contains a value and can be read/rewrite many times. Variables can be either *global* or *local*.
 
 ## Global variables
 
