--- a/es/coding/variables.html
+++ b/es/coding/variables.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Una **variable (var)** es una ubicación de almacenamiento con nombre que contiene un valor y se puede leer/reescribir muchas veces. Las variables pueden ser _globales_ o _locales_.
+Una **variable (var)** es una ubicación de almacenamiento con nombre que contiene un valor y se puede leer/reescribir muchas veces. Las variables pueden ser *globales* o *locales*.
 
 ## Variables Globales
 
@@ -127,7 +127,7 @@ var
    $x: float
    $y: float
    $z: float
-fin
+end
 ```
 
 Cuando se conocen los tipos de las variables, el compilador es capaz de procesar la expresión sin opcode:
