--- a/es/coding/arrays.html
+++ b/es/coding/arrays.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <title>Arreglos</title>
+  <title>Arrays</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Un **arreglo** representa una colección indexada de elementos del mismo tipo (llamada en el tipo de base). Puede trabajar con cualquier elemento directamente a través de su índice. Enumerada desde el 0. Las mismas solo estan soportadas en San Andreas, LCS y VCS.
+Un **array** representa una colección indexada de elementos del mismo tipo (llamada en el tipo de base). Puede trabajar con cualquier elemento directamente a través de su índice. Enumerada desde el 0. Las mismas solo estan soportadas en San Andreas, LCS y VCS.
 
 ## Sintaxis General
 
@@ -43,7 +43,7 @@ Liberty City Stories, Vice City Stories:\
 `<nombre>(<indice>,<tamaño>)`
 
 :::info
-En LCS, VCS, los elementos de un arreglo tienen solo 4 bytes de longitud. Por lo tanto, no es necesaria una declaración de tipo.
+En LCS, VCS, los elementos de un array tienen solo 4 bytes de longitud. Por lo tanto, no es necesaria una declaración de tipo.
 :::
 
 ```sb3
@@ -51,21 +51,36 @@ $index = 0
 $array($index,10) = 1
 ```
 
-## Declaración de Arreglo
+## Declaración de Array
 
-Las matrices pueden declararse utilizando la palabra clave `var` (similar a [variables](variables.md)):
+Los arrays pueden declararse utilizando la palabra clave `var` (similar a [variables](variables.md)):
 
 ```sb3
-var <array name>: array <size> of <type>
+var <,array name>: array <,size> of <,type>
 ```
 
 ```sb3
 var $FloatArray: array 10 of Float
 ```
 
-### Accediendo a los elementos del arreglo después de la declaración
+Puede declarar arrays de tipos primitivos (como números o cadenas) utilizando una sintaxis más concisa:
 
-Después de declarar un arreglo, puede acceder a sus elementos utilizando corchetes:
+```sb3
+<,tipo> <,nombre del array>[<,tamaño>]
+```
+
+El tipo puede ser uno de los siguientes: `Int`, `Float`, `String` o `LongString`:
+
+```sb3
+int intArray[10]
+float floatArray[10]
+string stringArray[10]
+longstring longStringArray[10]
+```
+
+### Accediendo a los elementos del array después de la declaración
+
+Después de declarar un array, puede acceder a sus elementos utilizando corchetes:
 
 ```sb3
 var $FloatArray: array 10 of Float
@@ -78,7 +93,7 @@ $FloatArray[$index] += 100.0
 $FloatArray[0] += 100.0
 ```
 
-Se puede acceder a los elementos de un arreglo que contiene [cadenas](data-types.md#cadenas-literarias) usando [variables de cadenas](data-types.md#variables-de-cadenas):
+Se puede acceder a los elementos de un array que contiene [cadenas](data-types.md#cadenas-literarias) usando [variables de cadenas](data-types.md#variables-de-cadenas):
 
 ```sb3
 // inicialización de los tres primeros elementos de s$strings
@@ -87,7 +102,7 @@ s$strings[1] = 'str2'
 s$strings[2] = 'str3'
 ```
 
-Un arreglo se puede declarar como una colección de [instancias de clase](classes.md#instancias-de-clase), sus métodos están disponibles para cada elemento::
+Un array se puede declarar como una colección de [instancias de clase](classes.md#instancias-de-clase), sus métodos están disponibles para cada elemento::
 
 ```sb3
 var $players: array 2 of Player
